using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FactoryMethod.Core.Processors
{
    public interface IMessageProcessor
    {
        void Process(string messageBody);
    }
}
